@@ -81,6 +81,8 @@ enum {
     STATE_ACCOUNTCHANGE_ERROR,
     STATE_ERROR,
     STATE_CHAR_SELECT,
+    STATE_CHANGEEMAIL_ATTEMPT,
+    STATE_CHANGEEMAIL,
     STATE_CHANGEPASSWORD_ATTEMPT,
     STATE_CHANGEPASSWORD,
     STATE_UNREGISTER_ATTEMPT,
