@@ -54,8 +54,6 @@ enum {
     APMSG_CHAR_SELECT_RESPONSE     = 0x0027, // B error, B*32 token, S game address, W game port, S chat address, W chat port
     PAMSG_EMAIL_CHANGE             = 0x0030, // S email
     APMSG_EMAIL_CHANGE_RESPONSE    = 0x0031, // B error
-    PAMSG_EMAIL_GET                = 0x0032, // -
-    APMSG_EMAIL_GET_RESPONSE       = 0x0033, // B error, S email
     PAMSG_PASSWORD_CHANGE          = 0x0034, // S old password, S new password
     APMSG_PASSWORD_CHANGE_RESPONSE = 0x0035, // B error
 
